--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,121 +1,432 @@
-.container {
-    background-color: rgb(252, 79, 26);
-    padding: 0 50px;         /* ← tạo khoảng cách 2 mép */
-    box-sizing: border-box;  /* tránh vỡ layout */
+:root {
+    --primary-color: rgb(247, 76, 46);
+    --white-color: #ffff;
+    --black-color: #000;
+    --text-color: #596169;
+    --header-height: 120px;
+    --nav-height: 34px;
+    --header-with-search-height: calc(var(--header-height) - var(--nav-height));
+
 }
 
+* {
+    box-sizing: border-box;
+}
 
-.container-navbar {
-    font-size: 13px;
-    color: #ffff;
+html {
+    font-size: 62.5%;
+    line-height: 1.6rem;
+    font-family: 'Roboto', sans-serif;
+}
+
+/* GRID */
+
+.grid {
+    width: 1200px;
+    max-width: 100%;
+    margin: 0 auto;
+}
+
+.grid__row {
     display: flex;
+    flex-wrap: wrap;
+    margin-left: -5px;
+    margin-right: -5px;
 }
 
-.header-nav {
+/* Cột 2 (Danh mục) */
+.grid__column-2 {
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 16.6667%;
+}
+
+/* Cột 10 (Sản phẩm) */
+.grid__column-10 {
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 83.3333%;
+}
+
+/* Cột 2-4 (Chia 5 cột để hiển thị sản phẩm - QUAN TRỌNG) */
+.grid__column-2-4 {
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 20%; /* 100% / 5 = 20% */
+    margin-bottom: 10px;
+    
+}
+
+/* HEADER-NAVBAR */
+
+.header {
+    min-height: var(--header-height);
+    padding: 5px 0 5px 0;
+    background-image: linear-gradient(0, #fe6433, #f53e2d);
+
+}
+
+.header__nav {
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    margin: 0 25px
+    padding: 10px 80px;
+    height: var(--nav-height);
+
+    width: 1200px;      /* Phải khớp số 1200px với nav ở trên */
+    max-width: 100%;
+    margin: 0 auto;     /* Tự động căn giữa */
+    padding: 0;         /* Xóa sạch padding 80px và margin cũ */
 }
 
-.header-nav-list {
-    display: flex;
-}
-
-.header-nav-item,
-.header-nav-item--separate {
-    font-size: 15px;
-    color: #ffff;
-    text-decoration: none;
+.header__nav-list {  
     list-style-type: none;
-    margin: 5px 10px;
-}
-
-.header-nav-icon {
-    color: #ffff;
-    font-size: 18px;
-    margin: 3.5px 4px;
-}
-
-.header-nav-item--separate {
-    margin: 5px -2px;
-    padding-right: 5px;
-}
-
-.header-nav-item-right,
-.header-nav-item-right--separate {
-    font-size: 15px;
-    color: #ffff;
-    text-decoration: none;
-    list-style-type: none;
-    margin: 5px 10px;
-}
-
-.header-nav-item-right--separate {
-    margin: 5px -2px;
-    padding-right: 5px;
-}
-
-.navbar-search {
     display: flex;
-    justify-content: center ;
-    height: 80px;
+ 
 
 }
 
-.navbar-logo {
-    /* position: absolute; */
-    width: 200px;
-}
-
-.navbar-logo--item {
-    position: relative;
-    width: 200px;
-    height: 80px;
-    margin: 0 0 0 -20px;
-    right: 50px;
-
-}
-
-.navbar-search-item {
+.header__nav-item {
+    color: var(--white-color);
     display: flex;
     justify-content: center;
-    align-items: center;
-    width: auto;
-    margin: 0 30px;
-}
-
-.navbar-search-item__options {
-    width: 900px;
-    height: 35px;
-    border-radius: 5px;
+      align-items: center; 
+    margin: 0 8px;
     position: relative;
-    right: 60px;
+    font-size: 13px;
+    text-decoration: none;
 }
 
-.logo-cart {
+.header__nav-list--separate::after {
+    content:"";
+    display: block;
+    position: absolute;
+    border-left: 1px solid #f4d0c5;
+    height: 14px;
+    right: -8px;
+    top: 55%;
+    transform: translateY(-50%);
+    margin: auto;
+
+}
+
+.header__nav-item--link,
+.header__nav-icon--link {
+    color: var(--white-color);
+    text-decoration: none;
+}
+
+.header__nav-icon--link {
+    font-size: 18px;
+    margin: 0 5px;
+}
+
+.header__nav-item--link:hover {
+    color: var(--text-color);
+}
+
+.header__nav-icon--link:hover {
+    color: var(--text-color);
+}
+
+.header__nav-item--strong:hover {
+    color: var(--text-color);
+}
+
+/* HEADER SEARCH */
+.header-search-cart {
+    height: var(--header-with-search-height);
     display: flex;
     align-items: center;
+    padding: 0px 80px;
+
+    width: 1200px;      /* Phải khớp số 1200px với nav ở trên */
+    max-width: 100%;
+    margin: 0 auto;     /* Tự động căn giữa */
+    padding: 0;         /* Xóa sạch padding 80px và margin cũ */
 }
 
-.logo-cart-item  {
-    font-size: 25px;
+.header__logo {
+    width: 200px;
+    flex-shrink: 0;
+}
+
+.header__logo-link--item {
+    color: var(--white-color);
+    text-decoration: none;
+    font-size: 2.5rem; 
+    font-weight: 800; 
     color: white;
+
+    
 }
 
-.logo-cart-item:hover {
-    color: aliceblue;
+.header__search {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 40px;
+    background-color: var(--white-color);
+    border-radius: 2px;
+
 }
 
-.nav-list-product {
-    width: 30%;
-    border: 0.5px;
-    background-color: blue;
+.header__search--input {
+    flex: 1;
+    height: 100%;
+    position: relative;
 }
 
-.show-product {
-    width: 30%;
-    border: 0.5px;
-    background-color: blue;
+.header__search-item--input {
+    border: none;
+    outline: none;
+    width: 100%;
+    height: 100%;
+    color: var(--text-color);
+    padding: 0 13px;
+    font-size: 15px;
+    border-radius: 2px;
+}
+
+.header__search-btn {
+    background-color: var(--primary-color);
+    border-radius: 3px;
+    border: none;
+    outline: none;
+    margin-right: 5px;
+
+}
+
+.header__search-btn-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 32px;
+    width: 60px;
+    cursor: pointer;
+    color: var(--white-color);
+
+}
+
+.header__search-btn-icon:hover {
+    color: #596169;
+}
+
+.header__cart {
+    width: 150px;
+    text-align: center;
+    flex-shrink: 0;
+
+}
+
+.header__cart-btn {
+    color: var(--white-color);
+    font-size: 25px;
+}
+
+.header__cart-btn-icon {
+
+}
+
+.header__cart-btn:hover {
+    color: var(--text-color);
+}
+
+
+/* DANH MỤC SẢN PHẨM */
+.content {
+    background-color: #f5f5f5;
+    padding-top: 30px;
+}
+
+.category {
+    background-color: var(--white-color);
+    border-radius: 2px;
+}
+
+.category__heading {
+    display: flex;
+    align-items: center;
+    font-size: 18px;
+    font-weight: 800px;
+    padding: 12px 16px;
+    color: var(--text-color);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+        text-transform: uppercase;
+}
+
+.category__heading-icon {
+    display: flex;
+    align-items: center;
+    padding: 5px;
+}
+
+.category__list {    
+    list-style: none;
+    padding: 0 0 10px 0;
+    margin-left: 19px;
+}
+
+.category__list-item {
+
+}
+
+.category__list-item--link {
+    position: relative;
+    font-size: 1.4rem;
+    text-decoration: none;
+    color: var(--text-color);
+    display: block;
+    padding: 8px 19px;
+    transition: right linear 0.1s;
+    right: 0;
+}
+
+.category__list-item--link:hover {
+    right: -4px;
+    color: var(--primary-color);
+}
+
+.home-product-list {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 10px;
+}
+
+.home-product__item {
+    display: block;
+    text-decoration: none;
+    background-color: #fff;
+    border-radius: 2px; /* Bo góc nhẹ */
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1); /* Tạo bóng đổ nhẹ */
+    transition: transform ease-in 0.1s; /* Hiệu ứng chuyển động mượt */
+    justify-content: center;
+
+}
+
+.home-product__item--img {
+        padding-top: 100%;
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-position: center;
+        border-top-left-radius: 2px;
+        border-top-right-radius: 2px;
+}
+
+.home-product__item--name {
+    font-size: 1.4rem;
+    font-weight: 400;
+    color: var(--text-color);
+    line-height: 1.8rem;
+    height: 3.6rem;
+    margin: 10px 10px 6px;
+    overflow: hidden;
+    display: block;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+
+}
+
+.home-product__item-price {
+    display: flex;  
+    justify-content: space-between;
+    padding: 0 14px;
+}
+
+.home-product__item--price-old {
+    font-size: 13px;
+    text-decoration: line-through;
+    color: var(--text-color);
+}
+
+.home-product__item--price-new {
+    font-size: 14px;
+    color: var(--primary-color);
+}
+
+.home-product__item--rate {
+    padding: 0 14px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.home-product__item--heart {
+
+}
+
+.home-product__item--rate-icon {
+    color: var(--primary-color);
+
+}
+
+.home-product__item--place-quantity {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 0 14px;
+}
+
+.home-product__item--place-item, 
+.home-product__item--quantity-item {
+    color: var(--text-color);
+}
+
+/* REPONSIVE */
+@media (max-width: 1024px) {
+    .header__nav {
+        padding: 10px 40px;
+    }
+}
+
+/* Mobile */
+@media (max-width: 740px) {
+    .header__nav {
+        padding: 10px 16px; 
+    }
+}
+
+@media (max-width: 739px) {
+    
+    /* 1. Ẩn bớt thanh Navbar trên cùng cho đỡ rối */
+    .header__nav {
+        display: none;
+    }
+
+    /* 2. Chỉnh lại Grid Layout chính */
+    /* Ẩn cột danh mục bên trái đi (sau này làm menu hamburger sau) */
+    .grid__column-2 {
+        display: none; 
+    }
+    
+    /* Cho phần chứa sản phẩm bung ra full màn hình */
+    .grid__column-10 {
+        width: 100%;
+        padding: 0 4px; /* Cách lề tí cho đẹp */
+    }
+
+    /* 3. Chỉnh số lượng sản phẩm trên 1 hàng */
+    /* Thay vì 20% (5 cái) thì sửa thành 50% (2 cái) */
+    .grid__column-2-4 {
+        width: 50%;
+    }
+
+    /* 4. Chỉnh lại thanh tìm kiếm cho đỡ lệch */
+    .header-search-cart {
+        padding: 0 8px; /* Giảm padding 2 bên */
+        height: auto;   /* Cho chiều cao tự động co giãn */
+        padding-bottom: 10px;
+    }
+
+    /* Logo nhỏ lại xíu hoặc ẩn text đi nếu cần */
+    .header__logo {
+        width: auto;
+        margin-right: 10px;
+    }
+    
+    /* Ẩn chữ K-Market đi, để lại icon túi thôi cho gọn (tùy chọn) */
+    .header__logo-link--item span {
+        display: block; /* Hoặc ẩn bớt text */
+        font-size: 2rem;
+    }
 }
